# cotoami-remake

./: .dockerignore  Cargo.toml  Dockerfile  README.md  rustfmt.toml
.github/: FUNDING.yml
cotoami_db/: .gitignore  Cargo.toml  NOTE.md  WORKLOG.md  schema.rs
cotoami_db/examples/: graph.rs  import.rs  search.rs
cotoami_db/migrations/001_nodes/: down.sql  up.sql
cotoami_db/migrations/002_cotos_and_itos/: up.sql
cotoami_db/migrations/002_cotos_and_links/: down.sql  up.sql
cotoami_db/migrations/003_nodes_root_cotonoma/: down.sql  up.sql
cotoami_db/migrations/004_changelog/: down.sql  up.sql
cotoami_db/migrations/005_full_text_search/: down.sql  up.sql
cotoami_db/migrations/006_unread/: down.sql  up.sql
cotoami_db/src/: db.rs  exif.rs  image.rs  lib.rs  models.rs  schema.rs  time.rs
cotoami_db/src/db/: error.rs  globals.rs  op.rs  operator.rs  ops.rs  session.rs  sqlite.rs  transactions.rs
cotoami_db/src/db/op/: and_then.rs  map.rs
cotoami_db/src/db/ops/: changelog_ops.rs  child_node_ops.rs  coto_ops.rs  cotonoma_ops.rs  graph_ops.rs  ito_ops.rs  link_ops.rs  local_node_ops.rs  node_ops.rs  node_role_ops.rs  parent_node_ops.rs
cotoami_db/src/db/transactions/: changes.rs  cotonomas.rs  cotos.rs  graph.rs  itos.rs  links.rs  nodes.rs
cotoami_db/src/models/: NOTE.md  changelog.rs  coto.rs  cotonoma.rs  graph.rs  ito.rs  link.rs  node.rs  operator.rs
cotoami_db/src/models/node/: child.rs  client.rs  incorporated.rs  local.rs  parent.rs  roles.rs  server.rs
cotoami_db/tests/: changelog_test.rs  common.rs  cotonomas_by_prefix_test.rs  cotonomas_test.rs  cotos_test.rs  graph_test.rs  init_test.rs  itos_test.rs  links_test.rs  local_node_test.rs  op_test.rs  pagination_test.rs  parent_test.rs  parents_test.rs  promote_test.rs  repost_test.rs  search_test.rs  server_test.rs
cotoami_desktop/tauri/: .gitignore  Cargo.toml  NOTE.md  README.md  TAURI_PERMISSIONS.md  build.rs  tauri.conf.json
cotoami_desktop/tauri/capabilities/: browser-content.json  migrated.json
cotoami_desktop/tauri/geomap/: planet.pmtiles  style.json
cotoami_desktop/tauri/icons/: icon.icns
cotoami_desktop/tauri/permissions/autogenerated/: browser_attach.toml  browser_download_intent.toml  browser_history_state.toml  browser_request_selection_capture.toml  browser_resize.toml  browser_restore_scroll.toml  browser_reveal_downloaded_file.toml  browser_scroll_state.toml  browser_selection_capture.toml  browser_selection_state.toml  browser_set_blank_theme.toml  browser_set_selection_clip_overlay.toml  connect_to_servers.toml  create_database.toml  new_owner_password.toml  node_command.toml  open_browser_window.toml  open_database.toml  operate_as.toml  show_window.toml  system_info.toml  validate_database_folder.toml  validate_new_database_folder.toml
cotoami_desktop/tauri/src/: commands.rs  config.rs  conn.rs  db.rs  error.rs  event.rs  lib.rs  log.rs  main.rs  message.rs  plugins.rs  recent.rs  system.rs  window_state.rs
cotoami_desktop/tauri/src/commands/: browser.rs  browser_page.js  conn.rs  db.rs  error.rs  system.rs
cotoami_desktop/tauri/src/db/: recent.rs
cotoami_desktop/tauri/src/plugins/: window_state.rs
cotoami_node/: Cargo.toml  Dockerfile  README.md  compose-example.yaml
cotoami_node/.kiro/steering/: product.md  structure.md  tech.md
cotoami_node/crates/db/: .gitignore  Cargo.toml  README.md  WORKLOG.md  diesel.toml
cotoami_node/crates/db/examples/: graph.rs  import.rs  search.rs
cotoami_node/crates/db/src/: db.rs  image.rs  lib.rs  models.rs
cotoami_node/crates/db/tests/: changelog_test.rs  common.rs  cotonoma_tree_test.rs  cotonomas_by_prefix_test.rs  cotonomas_like_test.rs  cotonomas_test.rs  cotos_test.rs  geolocated_cotos_test.rs  graph_test.rs  itos_test.rs  local_node_test.rs  op_test.rs  pagination_test.rs  parents_test.rs  promote_test.rs  repost_test.rs  search_test.rs
cotoami_node/crates/node/: .gitignore  Cargo.toml
cotoami_node/crates/node/src/: client.rs  codec.rs  lib.rs  main.rs  remote.rs  service.rs  state.rs  web.rs
cotoami_node/crates/node/tests/: change_remote_test.rs  common.rs  connection_test.rs  plugin_test.rs  service_test.rs
cotoami_node/crates/plugin_api/: Cargo.toml  README.md
cotoami_node/crates/plugin_api/src/: event.rs  lib.rs  models.rs
cotoami_node/src/: api.rs  client.rs  config.rs  conn.rs  csrf.rs  error.rs  event.rs  http.rs  lib.rs  main.rs  pubsub.rs  service.rs  state.rs  web.rs
cotoami_node/src/api/: changes.rs  cotonomas.rs  cotos.rs  error.rs  events.rs  nodes.rs  parents.rs  router.rs  servers.rs  session.rs
cotoami_node/src/api/cotonomas/: cotos.rs
cotoami_node/src/api/nodes/: children.rs  parents.rs
cotoami_node/src/client/: http.rs  http_client.rs  retry.rs  sse.rs  sse_client.rs  ws.rs
cotoami_node/src/event/: local.rs  remote.rs  tungstenite.rs  ws.rs
cotoami_node/src/event/remote/: tungstenite.rs
cotoami_node/src/http/: changes.rs  clients.rs  cotonomas.rs  cotos.rs  csrf.rs  events.rs  nodes.rs  router.rs  servers.rs  session.rs
cotoami_node/src/http/cotonomas/: cotos.rs
cotoami_node/src/http/nodes/: children.rs  parents.rs
cotoami_node/src/service/: client.rs  command.rs  error.rs  local_node.rs  models.rs  pubsub.rs  server.rs  service_ext.rs
cotoami_node/src/service/client/: http.rs  pubsub.rs
cotoami_node/src/state/: changes.rs  client_conn.rs  config.rs  conn.rs  error.rs  impls.rs  internal.rs  nodes.rs  parents.rs  plugins.rs  pubsub.rs  server_conn.rs  service.rs  session.rs
cotoami_node/src/state/impls/: changes.rs  cotos.rs  events.rs  init.rs  local_node.rs  nodes.rs  parents.rs  servers.rs  session.rs
cotoami_node/src/web/: changes.rs  cotonomas.rs  cotos.rs  csrf.rs  data.rs  events.rs  nodes.rs  router.rs  session.rs  ws.rs
cotoami_node/tests/: client_conn_test.rs  common.rs  connection_test.rs  node_service_test.rs  service_test.rs
cotoami_plugin/api/: Cargo.toml
cotoami_plugin/api/src/: event.rs  lib.rs  models.rs
cotoami_plugin/plugins/chatgpt/: Cargo.toml
cotoami_plugin/plugins/echo/: Cargo.toml
cotoami_plugins/echo/: Cargo.toml  README.md
(+664 files in other folders)
