[workspace]
members = [
  "cotoami_desktop/tauri",
  "cotoami_db",
  "cotoami_node",
]
resolver = "2"

[workspace.package]
authors = ["Daisuke Morita <daisuke.marubinotto@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"
version = "0.1.3"

[workspace.dependencies]
anyhow = "1.0"
bytes = {version = "1", features = ["serde"]}
chrono = {version = "0.4.31", features = ["serde"]}
clap = {version = "4.4.16", features = ["derive"]}
cotoami_db = {path = "cotoami_db"}
derive-new = "0.6.0"
derive_more = {version = "=1.0.0-beta.6", features = ["debug", "display"]}
once_cell = "1.19.0"
parking_lot = "0.12.1"
rand = "0.8.5"
regex = "1.10.2"
rmp-serde = "1.1.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0.56"
tracing = "0.1"
url = "2.5.0"
uuid = {version = "1.6.1", features = ["v4", "serde"]}
validator = {version = "0.16.1", features = ["derive"]}
