[workspace]
members = [
  "cotoami_desktop/tauri",
  "cotoami_db",
  "cotoami_node",
]
resolver = "2"

[workspace.package]
authors = ["Daisuke Morita <daisuke.marubinotto@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
version = "0.4.1"

[workspace.dependencies]
anyhow = "1.0"
base64 = "0.22.0"
bytes = {version = "1", features = ["serde"]}
chrono = {version = "0.4.31", features = ["serde"]}
clap = {version = "4.4.16", features = ["derive"]}
cotoami_db = {path = "cotoami_db"}
cotoami_node = {path = "cotoami_node"}
derive-new = "0.6.0"
derive_more = {version = "1.0.0", features = ["debug", "display"]}
futures = "0.3.30"
futures-util = "0.3.30"
googletest = "0.12.0"
indoc = "2.0.5"
itertools = "0.14.0"
once_cell = "1.19.0"
parking_lot = {version = "0.12.3", features = ["send_guard"]}
rand = "0.8.5"
regex = "1.10.2"
rmp-serde = "1.3.0"
serde = {version = "1.0", features = ["derive", "rc"]}
serde_json = "1.0"
thiserror = "1.0.56"
tower-service = "0.3.2"
tracing = "0.1"
url = "2.5.0"
uuid = {version = "1.8.0", features = ["std", "v4", "v7", "serde"]}
validator = {version = "0.18.1", features = ["derive"]}
