[package]
edition = "2021"
name = "cotoami_db"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = {version = "0.10.2", features = ["std"]}
anyhow = "1.0"
argon2 = {version = "0.5.0", features = ["std"]}
base64 = "0.21.2"
bytes = {version = "1", features = ["serde"]}
chrono = {version = "0.4.23", features = ["serde"]}
derive-new = "0.5"
derive_more = {version = "=1.0.0-beta.3", features = ["debug", "display"]}
dotenvy = "0.15"
generic-array = "0.14.7"
identicon-rs = "4.0.1"
indoc = "2"
once_cell = "1.18.0"
parking_lot = "0.12.1"
petgraph = "0.6.3"
rand = "0.8.5"
rmp-serde = "1.1.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
url = "2.3.1"
uuid = {version = "1.3.2", features = ["v4", "serde"]}
validator = {version = "0.15", features = ["derive"]}

# Add support for RETURNING expressions for Sqlite via the returning_clauses_for_sqlite_3_35 feature
diesel = {version = "2.1.0", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"]}
diesel_migrations = {version = "2.1.0", features = ["sqlite"]}

# diesel 2.1.0 -> libsqlite3-sys >=0.17.2, <0.27.0
# https://github.com/diesel-rs/diesel/blob/v2.1.0/diesel/Cargo.toml#L19
# SQLite version is 3.41.2
# https://github.com/rusqlite/rusqlite/blob/v0.29.0/libsqlite3-sys/sqlite3/bindgen_bundled_version.rs#L3
libsqlite3-sys = {version = "0.26.0", features = ["bundled"]}

[dev-dependencies]
assert_matches = "1.5.0"
image = "0.24.6"
tempfile = "3"
