[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "cotoami_db"
rust-version.workspace = true
version.workspace = true

[dependencies]
aes-gcm = {version = "0.10.3", features = ["std"]}
anyhow.workspace = true
argon2 = {version = "0.5.0", features = ["std"]}
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
derive-new.workspace = true
derive_more.workspace = true
dotenvy = "0.15"
generic-array = "0.14.7"
googletest.workspace = true
identicon-rs = "4.0.3"
image = "0.25.2"
indoc.workspace = true
kamadak-exif = "0.5.5"
once_cell.workspace = true
parking_lot.workspace = true
petgraph = "0.6.4"
rand.workspace = true
regex.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
validator.workspace = true

# Add support for RETURNING expressions for Sqlite via the returning_clauses_for_sqlite_3_35 feature
diesel = {version = "2.1.6", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"]}
diesel_migrations = {version = "2.1.0", features = ["sqlite"]}

# diesel 2.1.6 -> libsqlite3-sys >=0.17.2, <0.29.0
# https://github.com/diesel-rs/diesel/blob/v2.1.6/diesel/Cargo.toml#L19
# SQLite version is 3.45.0
# https://github.com/rusqlite/rusqlite/blob/sys0.28.0/libsqlite3-sys/sqlite3/bindgen_bundled_version.rs#L26
libsqlite3-sys = {version = "0.28.0", features = ["bundled"]}

[dev-dependencies]
clap.workspace = true
tempfile = "3"
