[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "cotoami_node"
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true 
async-stream = "0.3.5" 
async-trait = "0.1.80" 
axum = {version = "0.6", features = ["headers", "ws"]} 
axum-extra = {version = "0.7.5", features = ["cookie"]} 
axum-macros = "0.3.7" 
bytes.workspace = true 
chrono.workspace = true 
const_format = "0.2.32" 
cotoami_db.workspace = true 
derive-new.workspace = true 
derive_more.workspace = true 
dirs = "5.0.1" 
dotenvy = "0.15.7" 
dyn-clone = "1.0.16" 
envy = "0.4" # seems unmaintained
eventsource-stream = "0.2.3" 
futures-util.workspace = true 
futures.workspace = true 
itertools.workspace = true 
mime = "0.3.17" 
parking_lot.workspace = true 
percent-encoding = "2.3.1" 
reqwest = {version = "0.11", features = ["json"]} 
reqwest-eventsource = "0.4.0" 
rmp-serde.workspace = true 
serde.workspace = true 
serde_json.workspace = true 
smallvec = "1.11.0" 
thiserror.workspace = true 
time = "0.3.25" 
tokio = {version = "1.0", features = ["full"]} 
tokio-tungstenite = {version = "0.21.0", features = ["rustls-tls-webpki-roots"]} 
tokio-util = "0.7.10" 
tracing-subscriber = "0.3" 
tracing.workspace = true 
url.workspace = true 
uuid.workspace = true 
validator.workspace = true
