[package]
authors.workspace = true
default-run = "cotoami_desktop"
description = "Cotoami Desktop"
edition.workspace = true
license.workspace = true
name = "cotoami_desktop"
rust-version.workspace = true
version.workspace = true

[build-dependencies]
tauri-build = {version = "2.2.0", features = []}

[dependencies]
anyhow.workspace = true
base64.workspace = true
bincode = "1.3"
bitflags = "2"
chrono.workspace = true
cotoami_db.workspace = true
cotoami_node.workspace = true
derive-new.workspace = true
futures-util.workspace = true
futures.workspace = true
googletest.workspace = true
indoc.workspace = true
log = "0.4.21"
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = {version = "2.5.1", features = ["protocol-asset"]}
tauri-plugin-dialog = "2.2.2"
tauri-plugin-log = {version = "2.4.0"}
tauri-plugin-os = "2.2.2"
tauri-plugin-process = "2.2.2"
tauri-plugin-shell = "2.2.1"
tauri-plugin-window-state = "2.2.2"
thiserror.workspace = true
tokio = {version = "1.0", features = ["full"]}
toml = "0.8.14"
tracing.workspace = true

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.8.1"
