[package]
authors = ["Daisuke Morita <daisuke.marubinotto@gmail.com>"]
default-run = "cotoami_desktop"
description = "Cotoami Desktop"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "cotoami_desktop"
rust-version = "1.88"
version = "0.8.1"

[build-dependencies]
tauri-build = {version = "2.2.0", features = []}

[dependencies]
anyhow = "1.0"
base64 = "0.22.0"
bincode = "1.3"
bitflags = "2"
chrono = {version = "0.4.31", features = ["serde"]}
cotoami_db = {path = "../../cotoami_node/crates/db"}
cotoami_node = {path = "../../cotoami_node/crates/node"}
derive-new = "0.6.0"
futures = "0.3.30"
futures-util = "0.3.30"
googletest = "0.12.0"
indoc = "2.0.5"
log = "0.4.21"
parking_lot = {version = "0.12.3", features = ["send_guard"]}
serde = {version = "1.0", features = ["derive", "rc"]}
serde_json = "1.0"
tauri = {version = "2.5.1", features = ["protocol-asset"]}
tauri-plugin-dialog = "2.2.2"
tauri-plugin-log = {version = "2.4.0"}
tauri-plugin-os = "2.2.2"
tauri-plugin-process = "2.2.2"
tauri-plugin-shell = "2.2.1"
tauri-plugin-window-state = "2.2.2"
thiserror = "1.0.56"
tokio = {version = "1.0", features = ["full"]}
toml = "0.8.23"
tracing = "0.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.8.1"
