[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "cotoami_plugin_api"
rust-version.workspace = true
version.workspace = true

[dependencies]
bytes.workspace = true
chrono.workspace = true
derive_more.workspace = true
extism-pdk.workspace = true
serde.workspace = true
serde_json.workspace = true
