[package]
authors = ["Daisuke Morita <daisuke.marubinotto@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
name = "cotoami_plugin_echo"
rust-version = "1.88"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
cotoami_plugin_api = {path = "../../cotoami_node/crates/plugin_api"}
extism-pdk = "1.4.1"
lazy-regex = {version = "3.4.1", default-features = false, features = ["lite"]}
