[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "cotoami_db"
rust-version.workspace = true
version.workspace = true

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
anyhow.workspace = true
argon2 = { version = "0.5.0", features = ["std"] }
base64.workspace = true
bytes.workspace = true
chrono.workspace = true
derive-new.workspace = true
derive_more.workspace = true
dotenvy = "0.15"
fs4 = "0.13.1"
generic-array = "0.14.7"
googletest.workspace = true
identicon-rs = "4.0.3"
image = "0.25.6"
indoc.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
petgraph = "0.6.4"
rand.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true
validator.workspace = true

diesel = { version = "2.3.5", features = [
    "sqlite",
    "chrono",
    # Add support for RETURNING expressions for Sqlite via the returning_clauses_for_sqlite_3_35 feature
    "returning_clauses_for_sqlite_3_35",
] }
diesel_migrations = { version = "2.3.1", features = ["sqlite"] }

# diesel 2.3.5 depends on libsqlite3-sys >=0.17.2, <0.36.0
# https://github.com/diesel-rs/diesel/blob/v2.3.5/diesel/Cargo.toml#L53
#
# libsqlite3-sys 0.35.0 contains SQLite version 3.49.1
# https://github.com/rusqlite/rusqlite/blob/v0.35.0/libsqlite3-sys/sqlite3/sqlite3.h#L149
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }

# Fixed version of MessagePack + Serde
#
# cotoami_db uses rmp-serde to store the following data in SQLite:
#   - ChangelogEntry::change 
#   - ServerNode::encrypted_password
#
# In order to make stored data compatible with the future versions, 
# we need to fix rmp-serde's version in this crate and re-export it.
rmp-serde = "1.3.0"

[dev-dependencies]
clap.workspace = true
tempfile = "3"
