[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "cotoami_plugin_api"
rust-version.workspace = true

# Update this version if this API or the set of host functions is changed.
version = "0.1.0"

[dependencies]
anyhow.workspace = true
bytes.workspace = true
derive_more.workspace = true
extism-pdk.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
