[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "cotoami_plugin_echo"
rust-version.workspace = true
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
cotoami_plugin_api.workspace = true
extism-pdk.workspace = true
lazy-regex = {version = "3.4.1", default-features = false, features = ["lite"]}
